--- a/about.html
+++ b/about.html
@@ -43,19 +43,19 @@
     <section class="team-section">
         <h2>Meet Our Team</h2>
         <div class="team-member">
-            <img src="techimg/tech9.jpg" alt="Team Member 1">
+            <img src="tech9.jpg" alt="Team Member 1">
             <h3>Jane Doe</h3>
             <p>Founder & CEO</p>
             <p>Jane has over 10 years of experience in the tech industry and is passionate about education.</p>
         </div>
         <div class="team-member">
-            <img src="techimg/tech6.jpg" alt="Team Member 2">
+            <img src="tech6.jpg" alt="Team Member 2">
             <h3>John Smith</h3>
             <p>Chief Technology Officer</p>
             <p>John is a tech enthusiast who leads our curriculum development and technology integration.</p>
         </div>
         <div class="team-member">
-            <img src="techimg/tech7.jpg" alt="Team Member 3">
+            <img src="tech7.jpg" alt="Team Member 3">
             <h3>Emily Johnson</h3>
             <p>Instructor</p>
             <p>Emily specializes in web development and enjoys mentoring students through their learning journey.</p>
