--- a/blog.html
+++ b/blog.html
@@ -30,19 +30,19 @@
         <h2>Latest Blog Posts</h2>
         <div class="blog-grid">
             <div class="blog-card">
-                <img src="techimg/blog1.jpg" alt="Blog Post 1" class="blog-image">
+                <img src="blog1.jpg" alt="Blog Post 1" class="blog-image">
                 <h3>The Future of AI in Education</h3>
                 <p>Explore how artificial intelligence is transforming learning and teaching.</p>
                 <a href="bloglearnmore.html" class="read-more">Read More</a>
             </div>
             <div class="blog-card">
-                <img src="techimg/blog2.jpg" alt="Blog Post 2" class="blog-image">
+                <img src="blog2.jpg" alt="Blog Post 2" class="blog-image">
                 <h3>Top Programming Languages in 2024</h3>
                 <p>A comprehensive guide to the best programming languages to learn this year.</p>
                 <a href="bloglearnmore.html" class="read-more">Read More</a>
             </div>
             <div class="blog-card">
-                <img src="techimg/blog3.jpg" alt="Blog Post 3" class="blog-image">
+                <img src="blog3.jpg" alt="Blog Post 3" class="blog-image">
                 <h3>Cloud Computing Trends to Watch</h3>
                 <p>Discover the latest advancements in cloud technology and services.</p>
                 <a href="bloglearnmore.html" class="read-more">Read More</a>
